# -ptr

./: .gitignore
.eide/: eide.yml
pc_ui/: CMakeLists.txt  README.md  test.cpp
pc_ui/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow_link.cpp  mainwindow_ui.cpp
src/: ChangeLog.md  Instrution.md  ReadMe.md  bugRepari.md  bugrepair.md  main.c
src/app/: app_main.c  app_main.h  cli.c  cli.h  ir_map_mgr.c  ir_map_mgr.h  ui_pages.c  ui_pages.h  ui_render.c  ui_render.h
src/bsp/: bsp_delay.c  bsp_delay.h  bsp_gpio.c  bsp_gpio.h  bsp_i2c_soft.c  bsp_i2c_soft.h  bsp_one_wire.c  bsp_one_wire.h  bsp_timer.c  bsp_timer.h  bsp_uart.c  bsp_uart.h
src/common/: config_types.h  err.h  event_types.h  types.h  version.h
src/docs/acceptance/: acceptance_criteria.md
src/docs/architecture/: code_structure.md  layers.md
src/drivers/: at24c02.c  at24c02.h  buzzer.c  buzzer.h  ds1302.c  ds1302.h  ds18b20.c  ds18b20.h  ir_nec.c  ir_nec.h  keypad.c  keypad.h  lcd1602.c  lcd1602.h  singleKey.c  singleKey.h  stepper_uln2003.c  stepper_uln2003.h
src/kernel/: Data_rename.h  event_queue.c  event_queue.h  scheduler.c  scheduler.h  soft_timer.c  soft_timer.h  tick.c  tick.h
src/services/: action_center.c  action_center.h  cfg_store.c  cfg_store.h  device_model.c  device_model.h  error_mgr.c  error_mgr.h  logger.c  logger.h  protocol_v1_service.c  protocol_v1_service.h  rule_engine.c  rule_engine.h  schedule.c  schedule.h
tcp_seri/: README.md  run_server.bat
tcp_seri/src/: serial_tcp_bridge.py  tcp_recv_client.py
tcp_seri/tools/: list_serial_ports.py
(+11 files in other folders)
